# space_coop

./: .gitignore  .travis.yml  Jenkinsfile  readme.md
physics_dylib/: Cargo.toml
physics_dylib/src/: lib.rs
prototype1/: Cargo.toml
prototype1/src/: client.rs  events.rs  helpers.rs  main.rs  net_helpers.rs  params.rs  server.rs  state.rs  str_ops.rs
prototype1/src/app_net/: deserialize.rs  helpers.rs  mod.rs  serialize.rs
prototype1/src/app_net_protocol/: mod.rs
prototype1/src/client/: mod.rs
prototype1/src/server/: mod.rs
prototype1/src/simple_rendering/: mod.rs
prototype2/: .gitignore  Cargo.toml  build.rs  default.nix
prototype2/client/: Cargo.toml  build.rs
prototype2/client/core/camera/: Cargo.toml
prototype2/client/core/camera/src/: lib.rs
prototype2/client/core/client_network/: Cargo.toml  build.rs
prototype2/client/core/client_network/src/: defragmentation.rs  lib.rs  system.rs
prototype2/client/core/client_state/: Cargo.toml
prototype2/client/core/client_state/src/: lib.rs
prototype2/client/core/debug/: Cargo.toml
prototype2/client/core/debug/src/: lib.rs
prototype2/client/core/mouse_lock/: Cargo.toml
prototype2/client/core/mouse_lock/src/: lib.rs
prototype2/client/core/network/: Cargo.toml
prototype2/client/core/network/src/: lib.rs  system.rs
prototype2/client/core/pause/: Cargo.toml
prototype2/client/core/pause/src/: lib.rs
prototype2/client/core/renderer/: Cargo.toml
prototype2/client/core/renderer/src/: lib.rs  system.rs
prototype2/client/core/state/: Cargo.toml
prototype2/client/core/state/src/: lib.rs
prototype2/client/core/synchronization/: Cargo.toml
prototype2/client/core/synchronization/src/: lib.rs
prototype2/client/core/window/: Cargo.toml
prototype2/client/core/window/src/: lib.rs
prototype2/client/features/: camera_rotation.feature  cuke.rs  pause_control.feature  wasd_movement.feature
prototype2/client/features/step_definitions/: camera_steps.rs  cucumber-rust.wire  engine_steps.rs  event_steps.rs  mod.rs  net_event_steps.rs  pause_steps.rs  window_steps.rs
prototype2/client/features/support/: mod.rs  window.rs
prototype2/client/infra/automatic_system_installer/: Cargo.toml
prototype2/client/infra/automatic_system_installer/src/: lib.rs
prototype2/client/infra/dag/: Cargo.toml
prototype2/client/infra/dag/src/: lib.rs
prototype2/client/plugin/client_player/: Cargo.toml
prototype2/client/plugin/client_player/src/: lib.rs
prototype2/client/plugin/console/: Cargo.toml
prototype2/client/plugin/console/src/: charsets.rs  input.rs  invoke.rs  lib.rs  preprocessor.rs  primitive_interpreter.rs
prototype2/client/plugin/mutator/: Cargo.toml
prototype2/client/plugin/mutator/src/: lib.rs
prototype2/client/plugin/player/: Cargo.toml
prototype2/client/plugin/player/src/: lib.rs
prototype2/client/src/: controller.rs  lib.rs  protocol.rs
prototype2/client/src/engine/: event_handler.rs  mod.rs  systems.rs
prototype2/client/src/engine/connection/: mod.rs
prototype2/client/src/engine/control/: camera.rs  console.rs  console_invoker.rs  event_distribution.rs  menu.rs  mod.rs  player.rs  window_input.rs
prototype2/client/src/engine/debug/: mod.rs
prototype2/client/src/engine/graphics/: mod.rs
prototype2/client/src/engine/io/: event_distribution.rs  health_check.rs  mod.rs  network_adapter.rs
prototype2/client/src/engine/state/: snapshot.rs
prototype2/client/src/network/: defragmentation.rs  mod.rs
prototype2/client/src/renderer/: console.rs  mod.rs
prototype2/client/src/renderer/opengl/: mod.rs  model.rs  primitive.rs  primitive3d.rs  shader.rs
prototype2/client/src/world/: mod.rs
prototype2/common/: Cargo.toml  build.rs
prototype2/common/ecs/: Cargo.toml  build.rs
prototype2/common/ecs/src/: aspects.rs  aspects.rs.in  lib.rs
prototype2/common/geometry/: Cargo.toml  build.rs
prototype2/common/geometry/src/: lib.rs  model.rs.in
prototype2/common/protocol/: Cargo.toml  build.rs
prototype2/common/protocol/src/: lib.rs  lib.rs.in
prototype2/common/src/: aspects.rs.in  lib.rs  protocol.rs  protocol.rs.in  world.rs  world.rs.in
prototype2/common/src/util/: mod.rs
prototype2/common/system/automatic_system_installer/src/: lib.rs
prototype2/common/system/dag/src/: lib.rs
prototype2/pubsub/: Cargo.toml
prototype2/pubsub/src/: lib.rs
prototype2/server/: Cargo.toml  build.rs
prototype2/server/aspects/: Cargo.toml  build.rs
prototype2/server/aspects/src/: lib.rs  lib.rs.in
prototype2/server/core/server_network/: Cargo.toml
prototype2/server/core/server_network/src/: adapter.rs  distribution.rs  fragmentation.rs  lib.rs  protocol.rs
prototype2/server/core/server_player/: Cargo.toml
prototype2/server/core/server_player/src/: connection.rs  health_check.rs  input.rs  lib.rs  (+1 more)
prototype2/server/plugin/physics/: Cargo.toml
prototype2/server/server_state/: Cargo.toml
prototype2/server/server_state/src/: lib.rs
prototype2/server/src/: lib.rs
prototype2/server/src/engine/: event_handler.rs  mod.rs  systems.rs
prototype2/server/src/network/: fragmentation.rs  mod.rs
prototype2/server/src/world/: mod.rs  mod.rs.in
prototype2/src/: bin.rs  lib.rs
prototype2/src/client/: controller.rs  engine.rs  mod.rs  network.rs  protocol.rs  renderer.rs  renderer.rs.old  world.rs
prototype2/src/client/engine/: event_handler.rs  mod.rs
prototype2/src/client/network/: defragmentation.rs  mod.rs
prototype2/src/client/renderer/: console.rs  mod.rs  opengl.rs
prototype2/src/common/: mod.rs  network.rs  protocol.rs  protocol.rs.in  world.rs  world.rs.in
prototype2/src/common/util/: mod.rs
prototype2/src/server/: engine.rs  event.rs  mod.rs  network.rs  physics.rs  players.rs  protocol.rs  state.rs  world.rs  world.rs.in
prototype2/src/server/engine/: event_handler.rs  mod.rs
prototype2/src/server/network/: fragmentation.rs  mod.rs
prototype2/src/server/world/: mod.rs  mod.rs.in
prototype2/system/automatic_system_installer/src/: lib.rs
prototype2/system/system_installer/: Cargo.toml
prototype2/system/system_installer/src/: lib.rs
(+31 files in other folders)
