[package]
name = "physics_dylib"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
itertools = "*"
specs = "0.7.0"
libloading = "0.3.1"
nalgebra = "0.8.2"
nphysics3d = "0.4.*"
ncollide = "0.9.1"

[dependencies.common]
path = "../prototype2/common"

[dependencies.aspects]
path = "../prototype2/server/aspects"

[dependencies.server_state]
path = "../prototype2/server/server_state"
