[package]
name = "prototype1"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
time = "*"
byteorder = "*"
itertools = "*"
glutin = "0.2.0"
cgmath = "*"
gfx = "*"
gfx_window_glutin = "*"
bit-vec = "*"

[dependencies.game_udp]
git = "https://github.com/acmcarther/rust_game_udp"
