[package]
name = "prototype2"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "*"
syntex = "*"
itertools = "*"

[dependencies.gaffer_udp]
git = "https://github.com/acmcarther/gaffer_udp"
rev = "9ad0a1b1527fa1800922320954bd75b4cb8cd5dc"

[dependencies]
itertools = "*"
uuid = { version = "0.2.1", features = ["serde", "v4"] }
serde = "0.7.0"
serde_json = "0.7.0"
time = "0.1.35"
gfx = "0.10.1"
cgmath = "*"
gfx_app = "*"
gfx_device_gl = "*"
gfx_window_glutin = "*"
glutin = "*"

[[bin]]
name = "space_coop"
path = "src/bin.rs"
