[package]
name = "prototype2"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dev-dependencies]
cucumber = "0.2.3"

[dependencies]
clap = "2.10.0"

[dependencies.client]
path = "./client"

[dependencies.common]
path = "./common"

[dependencies.server]
path = "./server"

[[bin]]
name = "space_coop"
path = "./src/bin.rs"
