[package]
name = "client"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
time = "0.1.35"
gfx = "0.12.0"
cgmath = "0.10"
gfx_device_gl = "*"
gfx_text = "0.12.0"
gfx_window_glutin = "*"
glutin = "0.6.1"
specs = "0.7.0"

[dependencies.common]
path = "../common"

[dependencies.pubsub]
path = "../pubsub"

[dependencies.network]
path = "./core/network"

[dependencies.pause]
path = "./core/pause"

[dependencies.debug]
path = "./core/debug"

[dependencies.renderer]
path = "./core/renderer"

[dependencies.synchronization]
path = "./core/synchronization"

[dependencies.camera]
path = "./core/camera"

[dependencies.console]
path = "./plugin/console"

[dependencies.window]
path = "./core/window"

[dependencies.player]
path = "./plugin/player"

[dependencies.mutator]
path = "./plugin/mutator"

[dependencies.state]
path = "./core/state"
