[package]
name = "client"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "0.4.17"
time = "0.1.35"
gfx = "0.12.0"
gfx_device_gl = "*"
gfx_window_glutin = "*"
glutin = "0.6.1"
specs = "0.7.0"

[dev-dependencies]
cucumber = "0.2.3"
lazy_static = "0.2.1"

[[test]]
name = "cuke"
path = "./features/cuke.rs"

[dependencies.automatic_system_installer]
path = "../common/system/automatic_system_installer"

[dependencies.common]
path = "../common"

[dependencies.pubsub]
path = "../pubsub"

[dependencies.client_network]
path = "./core/client_network"

[dependencies.pause]
path = "./core/pause"

[dependencies.debug]
path = "./core/debug"

[dependencies.mouse_lock]
path = "./core/mouse_lock"

[dependencies.renderer]
path = "./core/renderer"

[dependencies.synchronization]
path = "./core/synchronization"

[dependencies.camera]
path = "./core/camera"

[dependencies.console]
path = "./plugin/console"

[dependencies.window]
path = "./core/window"

[dependencies.client_player]
path = "./plugin/client_player"

[dependencies.mutator]
path = "./plugin/mutator"

[dependencies.client_state]
path = "./core/client_state"
