[package]
name = "server"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "*"
syntex = "*"
itertools = "*"

[dependencies]
gaffer_udp = "0.1.2"
itertools = "*"
serde = "0.7.9"
serde_json = "0.7.4"
time = "0.1.35"
cgmath = "0.7"
flate2 = "0.2.13"
specs = "0.7.0"
nalgebra = "0.8.2"
nphysics3d = "0.4.*"
ncollide = "0.9.1"

[dependencies.common]
path = "../common"
