[package]
name = "server"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.7.14"
syntex = "0.38.0"
itertools = "0.4.6"

[dependencies]
itertools = "*"
time = "0.1.35"
specs = "0.7.0"

[dependencies.common]
path = "../common"

[dependencies.pubsub]
path = "../pubsub"

[dependencies.aspects]
path = "./aspects"

[dependencies.server_state]
path = "./server_state"

[dependencies.server_network]
path = "./core/server_network"

[dependencies.server_player]
path = "./core/server_player"

[dependencies.physics]
path = "./plugin/physics"

[dependencies.automatic_system_installer]
path = "../common/system/automatic_system_installer"
