[package]
name = "protocol"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.7.9"
itertools = "*"

[dependencies]
specs = "0.7.0"
uuid = { version = "0.2.2", features = ["serde", "v4"] }
serde = "0.7.9"
serde_json = "0.7.4"
gaffer_udp = "0.1.2"

[dependencies.ecs]
path = "../ecs"
