[package]
name = "aspects"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.7.14"
syntex = "0.38.0"
itertools = "0.4.16"

[dependencies]
itertools = "0.4.16"
time = "0.1.35"
gfx = "0.12.0"
serde = "0.7.9"
serde_json = "0.7.4"
specs = "0.7.0"

[dependencies.common]
path = "../../common"
