[package]
name = "camera"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
cgmath = "0.10"
specs = "0.7.0"

[dependencies.client_state]
path = "../client_state"

[dependencies.mouse_lock]
path = "../mouse_lock"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.automatic_system_installer]
path = "../../../common/system/automatic_system_installer"
