[package]
name = "debug"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
specs = "0.7.0"

[dependencies.common]
path = "../../../common"

[dependencies.client_state]
path = "../client_state"

[dependencies.automatic_system_installer]
path = "../../infra/automatic_system_installer"
