[package]
name = "mouse_lock"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
specs = "0.7.0"
glutin = "0.6.1"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.client_state]
path = "../client_state"

[dependencies.pause]
path = "../pause"

[dependencies.automatic_system_installer]
path = "../../infra/automatic_system_installer"
