[package]
name = "pause"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
specs = "0.7.0"
glutin = "0.6.1"

[dependencies.common]
path = "../../../common"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.client_state]
path = "../client_state"

[dependencies.automatic_system_installer]
path = "../../../system/automatic_system_installer"
