[package]
name = "renderer"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
gaffer_udp = "0.1.2"
itertools = "*"
serde = "0.7.9"
serde_json = "0.7.4"
time = "0.1.35"
flate2 = "0.2.13"
specs = "0.7.0"
cgmath = "0.10"
gfx = "0.12.0"
gfx_device_gl = "*"
gfx_text = "0.12.0"
gfx_window_glutin = "*"
glutin = "0.6.1"

[dependencies.common]
path = "../../../common"

[dependencies.debug]
path = "../debug"

[dependencies.camera]
path = "../camera"

[dependencies.pause]
path = "../pause"

[dependencies.state]
path = "../state"

[dependencies.console]
path = "../../plugin/console"
