[package]
name = "renderer"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
time = "0.1.35"
specs = "0.7.0"
cgmath = "0.10"
gfx = "0.12.0"
gfx_device_gl = "*"
gfx_text = "0.12.0"
gfx_window_glutin = "*"
glutin = "0.6.1"

[dependencies.common]
path = "../../../common"

[dependencies.debug]
path = "../debug"

[dependencies.camera]
path = "../camera"

[dependencies.pause]
path = "../pause"

[dependencies.client_state]
path = "../client_state"

[dependencies.console]
path = "../../plugin/console"

[dependencies.automatic_system_installer]
path = "../../../common/system/automatic_system_installer"
