[package]
name = "synchronization"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
specs = "0.7.0"

[dependencies.common]
path = "../../../common"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.network]
path = "../network"

[dependencies.state]
path = "../state"
