[package]
name = "window"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
glutin = "0.6.1"
specs = "0.7.0"

[dependencies.client_state]
path = "../client_state"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.automatic_system_installer]
path = "../../../system/automatic_system_installer"
