[package]
name = "mutator"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
specs = "0.7.0"

[dependencies.console]
path = "../console"

[dependencies.state]
path = "../../core/state"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.common]
path = "../../../common"
