[package]
name = "mutator"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
specs = "0.7.0"

[dependencies.console]
path = "../console"

[dependencies.client_state]
path = "../../core/client_state"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.common]
path = "../../../common"
