[package]
name = "server_network"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
gaffer_udp = "0.1.2"
itertools = "*"
serde_json = "0.7.4"
time = "0.1.35"
flate2 = "0.2.13"
specs = "0.7.0"

[dependencies.common]
path = "../../../common"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.aspects]
path = "../../aspects"

[dependencies.server_state]
path = "../../server_state"
