[package]
name = "server_player"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
itertools = "*"
time = "0.1.35"
specs = "0.7.0"

[dependencies.common]
path = "../../../common"

[dependencies.pubsub]
path = "../../../pubsub"

[dependencies.aspects]
path = "../../aspects"

[dependencies.server_network]
path = "../server_network"

[dependencies.server_state]
path = "../../server_state"

[dependencies.physics]
path = "../../plugin/physics"

[dependencies.automatic_system_installer]
path = "../../../system/automatic_system_installer"
